# GoIT_Web_PD_Homework_7

./: .env.example  README.md  config.ini  main.py  my_select.py  orm_async_session.py  orm_core.py  orm_session.py  orm_session_new_api.py  pyproject.toml  reset_db.py  seed.py
conf/: db_connection.py  models.py
migrations/: env.py
migrations/versions/: 09ba149a2817_init.py  0fde8275ebfa_init.py  80ef72c5e350_initial.py
my_venv/: pyvenv.cfg
seeds/: init.py
